tests/e2e/function_invalid_return.error
Error: syntax error in story at line 2, column 9

2|      return a / b + c or d
               ^

E0101: Variable `a` has not been defined.
